--- a/content/publication/icphs-01/cite.bib
+++ b/content/publication/icphs-01/cite.bib
@@ -2,5 +2,6 @@
   author={Emmanuel Ferrange and Cédric Gendrot and Thomas Pellegrini},
   title={Towards phonetic interpretability in deep learning applied to voice comparison},
   year=2019,
+  pages=790-794,
   booktitle={Proc. International Congress of Phonetic Sciences (IPChS 2019)}
 }
