--- a/content/publication/icphs-03/cite.bib
+++ b/content/publication/icphs-03/cite.bib
@@ -2,5 +2,6 @@
   author={Coline Caillol and Emmanuel Ferrange},
   title={The sociophonetics of British heavy metal music: T Voicing and the FOOT-STRUT split},
   year=2019,
+  pages=2650-54,
   booktitle={Proc. International Congress of Phonetic Sciences (IPChS 2019)}
 }
