--- a/content/publication/icphs-01/cite.bib
+++ b/content/publication/icphs-01/cite.bib
@@ -1,5 +1,5 @@
 @inproceedings{ferragne2019ICPhS,
-  author={Emmanuel Ferrange and Cédric Gendrot and Thomas Pellegrini},
+  author={Emmanuel Ferragne and Cédric Gendrot and Thomas Pellegrini},
   title={Towards phonetic interpretability in deep learning applied to voice comparison},
   year=2019,
   pages=790-794,
